<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/valid_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_check_24"
        android:layout_gravity="end"
        android:layout_margin="5dp"
        android:background="@null"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"
            android:text="@string/add_meeting_title"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:textColor="@android:color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_baseline_chat_bubble_24" />

        <EditText
            android:id="@+id/topic_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:maxLength="25"
            android:hint="@string/sujet_hint"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginEnd="25dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="10dp"
        android:layout_weight="3">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_baseline_account_circle_24" />

        <EditText
            android:id="@+id/mail_edit"
            android:digits="@string/digits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_gravity="center_vertical"
            android:paddingVertical="6dp"
            android:paddingHorizontal="20dp"
            android:maxLength="25"
            android:layout_weight="3"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/mail_end"
            android:layout_marginHorizontal="10dp"
            />

        <ImageButton
            android:id="@+id/add_mail_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_add_24"
            android:backgroundTint="@android:color/background_dark" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        app:layoutManager="LinearLayoutManager"
        tools:context=".Controler.Activity.AddMeetingActivity"
        tools:listitem="@layout/fragment_mail"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_calendar_today_24"
            android:background="@null"/>

        <TextView
            android:id="@+id/date_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:paddingStart="10dp"
            android:text="@string/date_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_access_time_24"
            android:background="@null"/>

        <TextView
            android:id="@+id/hour_start_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:paddingStart="10dp"
            android:text="@string/horaire_start_text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="-" />

        <TextView
            android:id="@+id/hour_end_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_marginEnd="20dp"
            android:text="@string/horaire_end_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_baseline_edit_location_24" />

        <Spinner
            android:id="@+id/room_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingVertical="6dp"
            android:layout_marginStart="10dp"
            android:hint="Séléctionnez une salle"/>
    </LinearLayout>
</LinearLayout>

</androidx.core.widget.NestedScrollView>