<resources>
    <string name="app_name">Mareu</string>
    <string name="add_meeting_title">CREATION D\'UNE NOUVELLE REUNION</string>
    <string name="sujet_hint">Sujet de la réunion</string>
    <string name="mail_end">\@lamezone.com</string>
    <string name="horaire_start_text">Début de la réunion</string>
    <string name="horaire_end_text">Fin de la réunion</string>
    <string name="date_text">Date de la réunion</string>
    <string name="salle_hint">N° de la salle</string>
    <string name="Participants">Participants</string>
    <string name="Date">Date</string>
    <string name="filtrer_par_date">filtrer par date</string>
    <string name="filtrer_par_salle">filtrer par salle</string>
    <string name="Réinitialiser">Réinitialiser les filtres</string>
    <string name="wrong_hours_selected">Horaires incorrect</string>
    <string name="empty_fields">Veuillez remplir tous les champs</string>
    <string name="empty_mail">Veuillez insérer un mail</string>
    <string name="existing_mail">Mail déja saisi</string>
    <string name="room_unavailable">Salle indisponible</string>
    <string name="digits">abcdefghijklmonpqrstuvwxyz0123456789.-\'</string>

    <string name="salle_1">Salle 1</string>
    <string name="salle_2">Salle 2</string>
    <string name="salle_3">Salle 3</string>
    <string name="salle_4">Salle 4</string>
    <string name="salle_5">Salle 5</string>
    <string name="salle_6">Salle 6</string>
    <string name="salle_7">Salle 7</string>
    <string name="salle_8">Salle 8</string>
    <string name="salle_9">Salle 9</string>
    <string name="salle_10">Salle 10</string>

    <string-array name="room_array">
        <item>@string/salle_1</item>
        <item>@string/salle_2</item>
        <item>@string/salle_3</item>
        <item>@string/salle_4</item>
        <item>@string/salle_5</item>
        <item>@string/salle_6</item>
        <item>@string/salle_7</item>
        <item>@string/salle_8</item>
        <item>@string/salle_9</item>
        <item>@string/salle_10</item>
    </string-array>
</resources>