...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="10dp"
    android:orientation="vertical"
    android:id="@+id/fragment_layout">

    <ImageView
        android:id="@+id/circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_brightness_red_1_24"
...
    <TextView
        android:id="@+id/user_mail_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/start_text"
        app:layout_constraintStart_toStartOf="@id/start_text"
        app:layout_constraintEnd_toStartOf="@+id/delete_button"
        android:layout_marginTop="5dp"
        android:textColor="@android:color/black"
        android:singleLine="true"
        tools:text="maxime@lamezone.com, luca@lamezon.com"/>

    <ImageButton
...
